set style on content

--- a/app/src/css/style_edit.css
+++ b/app/src/css/style_edit.css
@@ -33,7 +33,9 @@ a{
 strong{
 	font-weight: 500;
 }
-
+.center{
+	text-align: center;
+}
 .fleft{
 	float: left;
 }
@@ -56,6 +58,12 @@ strong{
 }
 .padt10{
 	padding-top: 10px;
+}
+.mt20{
+	margin-top: 20px;
+}
+.mb20{
+	margin-bottom: 20px;
 }
 .container{
 
@@ -361,14 +369,14 @@ header{
     display: inline-block;
 }
 .opt{
-	padding: 3px;
+	padding: 6px;
     max-width: 100%;
     width: 160px;
 }
 
 .field input[type="text"]{
 	width: 82%;
-    padding: 3px;
+    padding: 6px;
 }
 .email-field{
 	width: 82%;
@@ -388,7 +396,7 @@ header{
 
 .info-supp input[type="text"]{
 	width: 90%;
-    padding: 3px;
+    padding: 6px;
 }
 .info-in2{
 	margin-top: 15px;
@@ -424,20 +432,25 @@ header{
 	font-size: 11px;
 }
 .info-password{
-	width: 36%;
+	width: 25%;
 	margin-right: 12px;
 }
+
 .conf-newpwd{
-	font-size: 11px ;
+	font-size: 11px;
+	width: 150px;
 }
 .change-btn{
 	padding-top: 14px;
 }
 .list-histo{
-	padding-top: 12px;
-	padding-bottom: 12px;
-	background-color: #fff;
+	padding: 12px 0px;	
+	background-color: #ffffff;
 	margin-bottom: 12px;
+	padding: 20px 20px;
+}
+.list-histo .mright{
+	margin-right: 70px;
 }
 .docx-content{
 	background-color: #fff;
@@ -446,10 +459,9 @@ header{
 	border-bottom: 2px solid #e3e8ed;
 	border-top: 2px solid #e3e8ed;
 	position: relative;
-	margin-top: 64px;
-	margin-bottom: 64px;
-	padding-bottom: 48px;
-	padding-top: 48px;
+	margin-top: 20px;
+	margin-bottom: 20px;	
+	padding-top: 20px;
 }
 
 .row{
@@ -462,21 +474,20 @@ header{
 	font-size: 11px;
 }
 .document .btnlast,.save .btnlast{
-	position: absolute;
-	left: 33%;
+	padding: 6px 25px;
 }
 .save{
-	position: relative;
+	text-align: center;
 }
 .docx-content{
-	padding-bottom: 14px;
-	padding-top: 14px;
-	margin-right: 12px;
-	width: 24%;
+	padding: 20px;
+	margin-right: 12px;	
 	box-shadow: 2px 1px 4px 3px #f1f1f1;
+	margin-bottom: 20px;
 }
-.list-docx .docx-content:last-child{
-	margin:0;
+.docx-content i{
+	font-size: 25px;
+	padding: 5px;
 }
 
 .wysig{
@@ -485,32 +496,51 @@ header{
 }
 
 .afooter{
-	background: white;
-	position: fixed;
-	width: 57%;
+	background: #ffffff;	
 	z-index: 2;
-	bottom: 0;
-	padding-top: 7px;
-	padding-bottom: 9px;
-	box-sizing: border-box;
-	left: 225px;
+	bottom: 0;	
+	position: absolute;
+	width: 62.4%;
+    right: 295px;
+    padding-bottom: 5px;
+
+}
+.bar{	
+	width: 69.5%;
+	margin: auto;
+
+}
+.bar i{
+	font-size: 15px;
+	margin-right: 10px;
+
 }
 
-.index{
-	border: 1px solid #fff;
-	font-size: 12px;
-	border-top: 1px;
+.index{	
+	font-size: 12px;	
 	padding: 12px 12px;
 	text-align: center;
+	margin-bottom: 5px;
+	width: 160px;
+	display: inline-block;
+
+
 }
 
 .notif-contrats{
 	background-color: rgb(255, 179, 0);
-	border-radius: 100%;
-	color: #ffffff;
-	text-align: center;
+    border-radius: 27px;
+    color: #ffffff;
+    text-align: center;
+    display: inline;
+    padding: 4px 9px;
+    font-size: 9px;
 }
-
+.footer .center{
+	background: red;
+	padding: 25px;
+    color: #aba7a7;
+}
 /* Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) and (max-width: 991px) {
 	header{
