--- a/app/src/css/style_edit.css
+++ b/app/src/css/style_edit.css
@@ -1,3 +1,70 @@
+/*@font-face {
+    font-family: 'Bergen-bold-italic';
+    src: url('../css/fonts/Bergen/BergenSans-BoldItalic.eot'),    
+        url('../css/fonts/Bergen/BergenSans-BoldItalic.eot?#iefix') format('embedded-opentype'),
+        url('../css/fonts/Bergen/BergenSans-BoldItalic.woff2') format('woff2'),
+        url('../css/fonts/Bergen/BergenSans-BoldItalic.woff') format('woff'),
+        url('../css/fonts/Bergen/BergenSans-BoldItalic.ttf') format('truetype');
+    font-weight: bold;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Bergen';
+    src: url('../css/fonts/Bergen/BergenSans.eot'),    
+        url('../css/fonts/Bergen/BergenSans.eot?#iefix') format('embedded-opentype'),
+        url('../css/fonts/Bergen/BergenSans.woff2') format('woff2'),
+        url('../css/fonts/Bergen/BergenSans.woff') format('woff'),
+        url('../css/fonts/Bergen/BergenSans.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Bergen-semi-bold-italic';
+    src: url('../css/fonts/Bergen/BergenSans-SemiBoldItalic.eot'),    
+        url('../css/fonts/Bergen/BergenSans-SemiBoldItalic.eot?#iefix') format('embedded-opentype'),
+        url('../css/fonts/Bergen/BergenSans-SemiBoldItalic.woff2') format('woff2'),
+        url('../css/fonts/Bergen/BergenSans-SemiBoldItalic.woff') format('woff'),
+        url('../css/fonts/Bergen/BergenSans-SemiBoldItalic.ttf') format('truetype');
+    font-weight: 600;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Bergen-bold';
+    src: url('../css/fonts/Bergen/BergenSans-Bold.eot'),    
+        url('../css/fonts/Bergen/BergenSans-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../css/fonts/Bergen/BergenSans-Bold.woff2') format('woff2'),
+        url('../css/fonts/Bergen/BergenSans-Bold.woff') format('woff'),
+        url('../css/fonts/Bergen/BergenSans-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Bergen-italic';
+    src: url('../css/fonts/Bergen/BergenSans-Italic.eot'),
+        url('../css/fonts/Bergen/BergenSans-Italic.eot?#iefix') format('embedded-opentype'),
+        url('../css/fonts/Bergen/BergenSans-Italic.woff2') format('woff2'),
+        url('../css/fonts/Bergen/BergenSans-Italic.woff') format('woff'),
+        url('../css/fonts/Bergen/BergenSans-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Bergen-semibold';
+    src: url('../css/fonts/Bergen/BergenSans-SemiBold.eot'),    
+        url('../css/fonts/Bergen/BergenSans-SemiBold.eot?#iefix') format('embedded-opentype'),
+        url('../css/fonts/Bergen/BergenSans-SemiBold.woff2') format('woff2'),
+        url('../css/fonts/Bergen/BergenSans-SemiBold.woff') format('woff'),
+        url('../css/fonts/Bergen/BergenSans-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
+*/
+
 .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl{
 	padding-right:0;
 	padding-left:0;
@@ -20,6 +87,7 @@ html,body{
 body{
 	/*overflow: hidden;*/
 }
+
 li{
 	/*display: none;*/
 	list-style: none;
@@ -200,6 +268,10 @@ header{
     width: 160px;
     display: inline-block;
 }
+.menu:hover li.no-icon{
+	position: relative;
+	right:-42px;
+}
 
 .wrap .menu li{
 	width: 95px;
@@ -234,6 +306,10 @@ header{
 	width: 100%;
     padding: 18.5px 0;
     margin-bottom: 10px;
+}
+.wrap .menu li.no-icon a{
+	left: -76px;
+    position: relative;
 }
 .wrap .menu li.no-icon a:after{
 	display: none;
