--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -285,7 +285,7 @@ header{
 }
 .wrap .menu li a{
 	display: inline-block;
-	width: 95px;
+	/*width: 95px;*/
 	color: #ffffff;
 	font-size: 12px;
 	font-family: arial, sans-serif;
